--- a/index.html
+++ b/index.html
@@ -37,14 +37,17 @@
 </style>
 </head>
 <body>
+
  
     <!-- Menú de navegación -->
 <nav>
 <ul>
-<li><a href="index.html">Inicio</a></li>
-<li><a href="nosotros.html">Estadísticas</a></li>
-<li><a href="servicios.html">Equipos</a></li>
-<li><a href="contacto.html">Highlights</a></li>
+<li><a href="https://pruebadecomputacin2bach.netlify.app/">Inicio</a></li>
+<li><a href="https://fbref.com/en/players/">Jugadores</a></li>
+<li><a href="https://fbref.com/en/squads/">Equipos</a></li>
+<li><a href="https://www.fichajes.com/">Últimos fichajes</a></li>
+  <li><a href="highlights.html">Regístrate</a></li>
+  
 </ul>
 </nav>
  
@@ -54,8 +57,10 @@
 </body>
 </html>
 
-¡Descubre las estadísticas más completas y actualizadas de tus jugadores y equipos favoritos! Desde los goles más espectaculares hasta las jugadas decisivas, aquí encontrarás toda la información en tiempo real.
+¡Descubre las estadísticas más completas y actualizadas de tus jugadores y equipos favoritos! Desde los goles más espectaculares hasta las jugadas decisivas, aquí encontrarás toda la información.
 <!DOCTYPE html>
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQp_jvWw7KOjIlbZi9infkZkkvqK9vuL9xiYQ&s" alt="Imagen con tamaño" style="width: 40%; height:auto;">
+      </p>
 <html lang="es">
 <head>
 <meta charset="UTF-8">
@@ -102,5 +107,8 @@
         a:hover {
             text-decoration: underline;
         }
+
+
+
 
 
