--- a/index.html
+++ b/index.html
@@ -3,61 +3,110 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Formulario de Contacto</title>
+<title>Menú de Navegación</title>
 <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            text-align: center;
-        }
-        form {
-            background: white;
-            padding: 20px;
-            max-width: 400px;
-            margin: auto;
-            border-radius: 10px;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
-        }
-        input, textarea {
-            width: 100%;
+        /* Estilos del menú */
+        nav {
+            background-color: #003366; /* Color de fondo */
             padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
         }
-        button {
-            background: blue;
-            color: white;
-            border: none;
-            padding: 10px;
-            width: 100%;
-            border-radius: 5px;
-            cursor: pointer;
+ 
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex; /* Alinea los elementos en fila */
         }
-        button:hover {
-            background: darkblue;
+ 
+        li {
+            margin: 0 15px;
+        }
+ 
+        a {
+            text-decoration: none;
+            color: #F7F6F6;
+            font-size: 18px;
+            padding: 10px 15px;
+            display: block;
+        }
+ 
+        a:hover {
+            background-color: #FA841D; /* Cambio de color al pasar el cursor */
+            border-radius: 5px;
         }
 </style>
 </head>
 <body>
+
  
-    <h2>Formulario de Contacto</h2>
+    <!-- Menú de navegación -->
+<nav>
+<ul>
+<li><a href="https://pruebadecomputacin2bach.netlify.app/">Inicio</a></li>
+<li><a href="https://fbref.com/en/players/">Jugadores</a></li>
+<li><a href="https://fbref.com/en/squads/">Equipos</a></li>
+<li><a href="https://www.fichajes.com/">Últimos fichajes</a></li>
+  <li><a 
+  
+</ul>
+</nav>
  
-    <form action="procesar.php" method="POST">
-<label for="nombre">Nombre:</label>
-<input type="text" id="nombre" name="nombre" required>
- 
-        <label for="email">Correo Electrónico:</label>
-<input type="email" id="email" name="email" required>
- 
-        <label for="mensaje">Mensaje:</label>
-<textarea id="mensaje" name="mensaje" rows="4" required></textarea>
- 
-        <button type="submit">Enviar</button>
-</form>
+    <h1>Football Stats Tracker</h1>
+<p></p>
  
 </body>
 </html>
+
+¡Descubre las estadísticas más completas y actualizadas de tus jugadores y equipos favoritos! Desde los goles más espectaculares hasta las jugadas decisivas, aquí encontrarás toda la información.
+<!DOCTYPE html>
+         
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title></title>
+<style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #0077ff  ;
+            color: #FFD700;
+            text-align: center;
+        }
+ 
+        header {
+            background-color: #007bff;
+            color: white;
+            padding: 1rem;
+        }
+ 
+        h1 {
+            margin: 0;
+        }
+ 
+        section {
+            padding: 2rem;
+        }
+ 
+        footer {
+            background-color: #333;
+            color: white;
+            padding: 1rem;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+ 
+        a {
+            color: #FFD700;
+            text-decoration: none;
+        }
+ 
+        a:hover {
+            text-decoration: underline;
+        }
+
 
 
 
